This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: 3.5.1 install fails on Windows Server 2008 R2 64-bit
Type: behavior Stage: resolved
Components: Installation, Windows Versions: Python 3.6, Python 3.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: steve.dower Nosy List: paul.moore, python-dev, sdmorris, steve.dower, tim.golden, zach.ware
Priority: normal Keywords:

Created on 2016-03-23 10:47 by sdmorris, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
Python 3.5.1 (64-bit)_20160323125008.log sdmorris, 2016-03-23 10:47 Install log
Messages (5)
msg262257 - (view) Author: Steve Morris (sdmorris) Date: 2016-03-23 10:47
Setup fails with "Windows 7 Service Pack 1 required"
msg262259 - (view) Author: Steve Morris (sdmorris) Date: 2016-03-23 11:47
I just tried the 3.4.4 installer (Windows x86-64 MSI) and it works correctly
msg262261 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2016-03-23 13:16
Apparently the version detection needs to be changed, and I'll need to figure out what the WS prerequisites are for installing the UCRT update.

It's entirely possible that there's an update you genuinely need to install 3.5, as there would be on a Windows client machine with that version, but I don't know what it is for Windows Server.
msg275381 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-09-09 18:44
New changeset a95e2a43b09b by Steve Dower in branch '3.5':
Issue #26619: Improves error message when installing on out-of-date Windows Server
https://hg.python.org/cpython/rev/a95e2a43b09b

New changeset fbb4aa1fcc47 by Steve Dower in branch 'default':
Issue #26619: Improves error message when installing on out-of-date Windows Server
https://hg.python.org/cpython/rev/fbb4aa1fcc47
msg275386 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2016-09-09 18:49
I'm assuming this was just a poor error message, as the version numbers all lined up correctly. There are now server-specific errors.
History
Date User Action Args
2022-04-11 14:58:28adminsetgithub: 70806
2016-09-09 18:49:24steve.dowersetstatus: open -> closed
resolution: fixed
messages: + msg275386

stage: resolved
2016-09-09 18:44:49python-devsetnosy: + python-dev
messages: + msg275381
2016-03-23 13:16:13steve.dowersetassignee: steve.dower
messages: + msg262261
versions: + Python 3.6
2016-03-23 11:47:58sdmorrissetmessages: + msg262259
2016-03-23 11:00:20SilentGhostsetnosy: + paul.moore, tim.golden, zach.ware, steve.dower
components: + Windows
2016-03-23 10:47:42sdmorriscreate