Issue #26619: Improves error message when installing on out-of-date Windows Server